main/default/objects/OpportunityLocationConfiguration__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date Approval was granted</description>
    <label>Approval_Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>