main/default/objects/OpportunityLocationConfiguration__c/fields/Approval_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_Date__c</fullName>
    <label>Approval Requested Date</label>
    <type>Date</type>
</CustomField>