main/default/objects/OpportunityLocationConfiguration__c/fields/Contract_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_End_Date__c</fullName>
    <label>Contract Term End Date</label>
    <type>Date</type>
</CustomField>