main/default/objects/OpportunityLocationConfiguration__c/fields/Display_on_Solution__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on Solution</label>
    <type>Checkbox</type>
</CustomField>