main/default/objects/OpportunityLocationConfiguration__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>