main/default/objects/OpportunityLocationConfiguration__c/fields/IsPrintable__c.field-meta.xml
<CustomField>
    <fullName>IsPrintable__c</fullName>
    <description>Flag to determine if a Solution can be printed using Generate PDF button functionality</description>
    <label>IsPrintable</label>
    <summaryFilterItems>
        <field>OLI__c.Approved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OLI__c.OpportunityLocationConfiguration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>