main/default/objects/OpportunityLocationConfiguration__c/fields/Market_Independent__c.field-meta.xml
<CustomField>
    <fullName>Market_Independent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Independent</label>
    <type>Checkbox</type>
</CustomField>