main/default/objects/OpportunityLocationConfiguration__c/fields/MRC_Floor_Total__c.field-meta.xml
<CustomField>
    <fullName>MRC_Floor_Total__c</fullName>
    <description>This is for reporting purposes only and won&#39;t be on page layouts.</description>
    <label>MRC Floor Total</label>
    <summarizedField>OLI__c.MRC_Floor_Total__c</summarizedField>
    <summaryForeignKey>OLI__c.OpportunityLocationConfiguration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>