main/default/objects/OpportunityLocationConfiguration__c/fields/MRC_Total__c.field-meta.xml
<CustomField>
    <fullName>MRC_Total__c</fullName>
    <label>MRC Total</label>
    <summarizedField>OLI__c.MRC_Total__c</summarizedField>
    <summaryForeignKey>OLI__c.OpportunityLocationConfiguration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>