main/default/objects/OpportunityLocationConfiguration__c/fields/nonPreferredAccess__c.field-meta.xml
<CustomField>
    <fullName>nonPreferredAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to hold whether solution is using preferred building access type for all products in the solution. Visible to code only.</description>
    <label>nonPreferredAccess</label>
    <type>Checkbox</type>
</CustomField>