main/default/objects/OpportunityLocationConfiguration__c/fields/NRC_Total__c.field-meta.xml
<CustomField>
    <fullName>NRC_Total__c</fullName>
    <label>NRC Total</label>
    <summarizedField>OLI__c.NRC_Total__c</summarizedField>
    <summaryForeignKey>OLI__c.OpportunityLocationConfiguration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>