main/default/objects/OpportunityLocationConfiguration__c/fields/PreferredAccessType__c.field-meta.xml
<CustomField>
    <fullName>PreferredAccessType__c</fullName>
    <description>Holds the preferred access type for the building at the given location.</description>
    <label>PreferredAccessType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>