main/default/objects/OpportunityLocationConfiguration__c/fields/Quote_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Count__c</fullName>
    <label>Quote Line Item Count</label>
    <summaryFilterItems>
        <field>OLI__c.SPC_MRC_Is_Quote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OLI__c.OpportunityLocationConfiguration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>