main/default/objects/OpportunityLocationConfiguration__c/validationRules/Coterminous_Term_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Coterminous_Term_Requires_Date</fullName>
    <active>true</active>
    <description>If Coterminous contract term is selected, contract end date is required</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Term__c , &#39;Coterminous&#39;), 
ISNULL(Contract_Term_End_Date__c) 
)</errorConditionFormula>
    <errorDisplayField>Contract_Term_End_Date__c</errorDisplayField>
    <errorMessage>Contract Term End Date is mandatory if Contract Term is &#39;Coterminous&#39;.</errorMessage>
</ValidationRule>