main/default/objects/OpportunityLocationConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Location__c</columns>
    <columns>MRC_Total__c</columns>
    <columns>NRC_Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <columns>Market_Independent__c</columns>
    <columns>Term__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MRC_Total__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>